--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,18 @@
 <head>
   <title>my angular app</title>
   <meta charset="utf8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/vendor.css">
   <link rel="stylesheet" href="/css/app.css">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body ng-app>
-  <article ng-view>
+  <article class="container">
+    <div ng-view></div>
   </article>
   <footer>
     @koba04
