--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,27 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
 </head>
-<body ng-app>
+<body ng-app="myapp">
   <article class="container">
-    <div ng-view></div>
+    <div class="view" ng-view></div>
+
+<script type="text/ng-template" id="top.html">
+<h1>Top</h1>
+<div>This is Top Page</div>
+<a href="#/page2">page2</a>
+</script>
+
+<script type="text/ng-template" id="page2.html">
+<h1>Page2</h1>
+<div>This is Page2</div>
+<a href="#/">top</a>
+</script>
+
+    <footer>
+      @koba04
+    </footer>
   </article>
-  <footer>
-    @koba04
-  </footer>
   <script src="/js/vendor.js"></script>
   <script src="/js/app.js"></script>
-
-
 </body>
 </html>
