Added ngAnimate stagger sample

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   </ul>
   <input type="text" class="form-control" ng-model="name" />
   <button type="button" class="btn btn-lg btn-primary" ng-click="add()">Add</button>
+  <button type="button" class="btn btn-lg btn-info" ng-click="multiAdd()">Multi Add</button>
   <button type="button" class="btn btn-lg btn-danger" ng-click="delete()">Delete</button>
   <a class="btn btn-lg btn-default" href="#/page2">Move to Page</a>
 </div>
