Added input placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="element in list track by $index" >{{element}}</li>
   </ul>
-  <input type="text" class="form-control" ng-model="name" />
+  <input type="text" class="form-control" ng-model="name" placeholder="Input your name" />
   <button type="button" class="btn btn-lg btn-primary" ng-click="add()">Add</button>
   <button type="button" class="btn btn-lg btn-info" ng-click="multiAdd()">Multi Add</button>
   <button type="button" class="btn btn-lg btn-danger" ng-click="delete()">Delete</button>
