--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title>my angular app</title>
+  <title>ngAnimate Demo</title>
   <meta charset="utf8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/vendor.css">
@@ -25,7 +25,7 @@
 
 <script type="text/ng-template" id="top.html">
 <div class="jumbotron">
-  <h1>ngAnimate Sample</h1>
+  <h1>ngAnimate Demo</h1>
   <ul class="list-group">
     <li class="list-group-item" ng-repeat="element in list track by $index" >{{element}}</li>
   </ul>
